// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`生成 Class 类测试 OpenAPI-2.0生成 Class 类测试: OpenAPI-2.0生成 Class 类测试 1`] = `
"/**
 * @description Returns pet inventories by status、Returns a map of status codes to quantities
 * @summary Request data entity class
 * @url [ GET ] /v2/store/inventory
 */
export class V2StoreInventoryRequestClassByGet {}"
`;

exports[`生成 Class 类测试 OpenAPI-3.0生成 Class 类测试: OpenAPI-3.00生成 Class 类测试 1`] = `
"/**
 * @description Returns pet inventories by status、Returns a map of status codes to quantities
 * @summary Response data entity class
 * @url [ GET ] /api/v3/store/inventory
 */
export class ApiV3StoreInventoryResponseClassByGet /* 非对象数据，不能生成Class代码**/
{}"
`;

exports[`生成 Class 类测试 array单参数: array单参数 1`] = `
"/**
 * @description uploads an image
 * @summary Request data entity class
 * @url [ POST ] /v2/pet/{petId}/uploadImage
 */
export class V2PetPetIdUploadImageRequestClassByPost { 
 // { array }
storeIds =  [
] 
 } 
"
`;

exports[`生成 Class 类测试 name - prefix - dropComment - onlyBody 属性测试: OpenAPI-2.0生成 Class dropComment属性测试 1`] = `"export class V2StoreInventoryRequestClassByGet {}"`;

exports[`生成 Class 类测试 name - prefix - dropComment - onlyBody 属性测试: OpenAPI-2.0生成 Class name属性测试 1`] = `
"/**
 * @description Returns pet inventories by status、Returns a map of status codes to quantities
 * @summary Request data entity class
 * @url [ GET ] /v2/store/inventory
 */
export class 自定义名称 {}"
`;

exports[`生成 Class 类测试 name - prefix - dropComment - onlyBody 属性测试: OpenAPI-2.0生成 Class onlyBody属性测试 1`] = `"{}"`;

exports[`生成 Class 类测试 name - prefix - dropComment - onlyBody 属性测试: OpenAPI-2.0生成 Class prefix属性测试 1`] = `
"/**
 * @description Returns pet inventories by status、Returns a map of status codes to quantities
 * @summary Request data entity class
 * @url [ GET ] /v2/store/inventory
 */
export class V2StoreInventoryRequestClassByGet {}"
`;
